[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/settings/settings.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/sfx_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/music_icon.png" type="Texture" id=3]
[ext_resource path="res://themes/default_body.tres" type="Theme" id=4]

[node name="Settings" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_right = 252.0
margin_bottom = 48.0

[node name="Label" type="TextureRect" parent="HBoxContainer2"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true

[node name="SFXSlider" type="HSlider" parent="HBoxContainer2"]
unique_name_in_owner = true
margin_left = 52.0
margin_right = 252.0
margin_bottom = 48.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.05
value = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 52.0
margin_right = 252.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )

[node name="Label2" type="TextureRect" parent="HBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true

[node name="MusicSlider" type="HSlider" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 52.0
margin_right = 252.0
margin_bottom = 48.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.05
value = 0.5

[connection signal="value_changed" from="HBoxContainer2/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
